[package]
name = "libept"
version = "0.1.0"
authors = ["Oxygen <3038094028@qq.com>"]
edition = "2018"

[lib]
crate-type = ["lib"]

[dependencies]
anyhow = "1.0"
regex = "1.4"
reqwest = { version = "0.11", features = [
  "brotli",
  "gzip",
  "cookies",
  "multipart",
  "json",
  "default-tls"
] }
serde = { version = "1.0.119", features = ["derive"] }
serde_json = "1.0.61"
thiserror = "1.0.23"
rust-crypto = "0.2"
base64 = "0.13"
url = "2.2"
tokio = { version = "1.0", features = ["full"] }
